Use List.of instead of singletonList